# ffpopt

./: CMakeLists.txt  README.txt  pyproject.toml
examples/dihedscan/: minimal_orig.rst7  run.sh
examples/dihedtwistfit/: minimal_orig.parm7  run.sh
examples/dihedtwistfit/save/: dihedplot.agr  dihedplot.par  it01.frcmod  it01.json  it01.parm7  it01.py  it01_10-9-8-6.xyz  it01_7-6-2-1.xyz  it01_9-8-6-2.xyz  it02.json  it02.parm7  it02.py  it02_10-9-8-6.xyz  it02_7-6-2-1.xyz  it02_9-8-6-2.xyz  orig_10-9-8-6.xyz  orig_7-6-2-1.xyz  orig_9-8-6-2.xyz  qdpi2_10-9-8-6.xyz  qdpi2_7-6-2-1.xyz  qdpi2_9-8-6-2.xyz
examples/geometric/: cons.10-9-8-6.inp  input.xyz  run.sh
examples/optimize/: run.sh
src/python/: CMakeLists.txt  Manifest.in  setup.py
src/python/deprecated/: ffpopt-MultiDihedFit.py
src/python/lib/ffpopt/: AmberParm.py  Constraints.py  Dihedrals.py  GeomOpt.py  Options.py  Reader.py  __init__.py
src/python/lib/ffpopt/ase/: __init__.py  calculator.py
src/python/lib/ffpopt/constants/: Conversions.py  PeriodicTable.py  __init__.py
